Build fix
Signed-off-by: Uladzislau <leksilonchikk@gmail.com>